@@ -12,6 +12,8 @@ lib_LTLIBRARIES = libaacs.la
 libaacs_la_SOURCES=\
 	src/libaacs/aacs.h \
 	src/libaacs/aacs.c \
+	src/libaacs/content_cert.h \
+	src/libaacs/content_cert.c \
 	src/libaacs/crypto.h \
 	src/libaacs/crypto.c \
 	src/libaacs/mkb.h \
